force-app/main/default/objects/Source__c/Source__c.object-meta.xml
<CustomObject>
    <description>Lead Source Tracking</description>
    <label>Source</label>
    <nameField>
        <displayFormat>LS-{000000}</displayFormat>
        <label>Source Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Source</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>