force-app/main/default/objects/Source__c/fields/Account_Converted_Into__c.field-meta.xml
<CustomField>
    <fullName>Account_Converted_Into__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Converted Into</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Source (Account)</relationshipLabel>
    <relationshipName>Source1</relationshipName>
    <type>Lookup</type>
</CustomField>