force-app/main/default/objects/Source__c/fields/Contact_Converted_Into__c.field-meta.xml
<CustomField>
    <fullName>Contact_Converted_Into__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Source (Contact Converted Into)</relationshipLabel>
    <relationshipName>Source1</relationshipName>
    <type>Lookup</type>
</CustomField>