force-app/main/default/objects/Source__c/fields/CTM_Ring_Time__c.field-meta.xml
<CustomField>
    <fullName>CTM_Ring_Time__c</fullName>
    <label>CTM Ring Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>