force-app/main/default/objects/Source__c/fields/Existing_Contact__c.field-meta.xml
<CustomField>
    <fullName>Existing_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Existing Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Source (Existing Contact)</relationshipLabel>
    <relationshipName>SourceDelete</relationshipName>
    <type>Lookup</type>
</CustomField>