force-app/main/default/objects/Source__c/fields/first_Touch_checkbox__c.field-meta.xml
<CustomField>
    <fullName>first_Touch_checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This indicates that this Source was the first time this person interacted with CoreVest</description>
    <inlineHelpText>This indicates that this Source was the first time this person interacted with CoreVest</inlineHelpText>
    <label>First Touch</label>
    <type>Checkbox</type>
</CustomField>