force-app/main/default/objects/Source__c/fields/IsConvertedLead__c.field-meta.xml
<CustomField>
    <fullName>IsConvertedLead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsConvertedLead</label>
    <type>Checkbox</type>
</CustomField>