force-app/main/default/objects/Source__c/fields/last_touch_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>last_touch_Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This indicates that this Source was the last time this person interacted with CoreVest</description>
    <inlineHelpText>This indicates that this Source was the last time this person interacted with CoreVest</inlineHelpText>
    <label>Last Touch</label>
    <type>Checkbox</type>
</CustomField>