force-app/main/default/objects/Source__c/fields/lead_id__c.field-meta.xml
<CustomField>
    <fullName>lead_id__c</fullName>
    <label>Lead ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>