force-app/main/default/objects/Source__c/fields/Master_Source__c.field-meta.xml
<CustomField>
    <fullName>Master_Source__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Master Source</label>
    <referenceTo>Master_Source__c</referenceTo>
    <relationshipLabel>Source</relationshipLabel>
    <relationshipName>Source</relationshipName>
    <type>Lookup</type>
</CustomField>