force-app/main/default/objects/Source__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>Lead Phone Number</description>
    <inlineHelpText>Lead Phone Number</inlineHelpText>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>