force-app/main/default/objects/Source__c/fields/Primary_Lead_status__c.field-meta.xml
<CustomField>
    <fullName>Primary_Lead_status__c</fullName>
    <label>Primary Lead status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unresponsive</fullName>
            </value>
            <value>
                <fullName>Unqualified</fullName>
            </value>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Close</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>