force-app/main/default/objects/Source__c/fields/Primary_Subsource__c.field-meta.xml
<CustomField>
    <fullName>Primary_Subsource__c</fullName>
    <label>Primary Subsource</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Broker</fullName>
            </value>
            <value>
                <fullName>RiverRock</fullName>
            </value>
            <value>
                <fullName>5Star</fullName>
            </value>
            <value>
                <fullName>AAPL</fullName>
            </value>
            <value>
                <fullName>ABS East</fullName>
            </value>
            <value>
                <fullName>ABS West</fullName>
            </value>
            <value>
                <fullName>ACOF</fullName>
            </value>
            <value>
                <fullName>ADC Roadshow</fullName>
            </value>
            <value>
                <fullName>Americatalyst</fullName>
            </value>
            <value>
                <fullName>Andy Thienkosol Sourced</fullName>
            </value>
            <value>
                <fullName>Answering Service</fullName>
            </value>
            <value>
                <fullName>Ashton Jajonie Sourced</fullName>
            </value>
            <value>
                <fullName>Augie Jones Sourced</fullName>
            </value>
            <value>
                <fullName>BiggerPockets</fullName>
            </value>
            <value>
                <fullName>BiggerPockets Conference</fullName>
            </value>
            <value>
                <fullName>Boris Zhuravel Sourced</fullName>
            </value>
            <value>
                <fullName>Brad Chmura Sourced</fullName>
            </value>
            <value>
                <fullName>Brandon Sarhad Sourced</fullName>
            </value>
            <value>
                <fullName>Brandon Turk Sourced</fullName>
            </value>
            <value>
                <fullName>Brendan Hamilton Sourced</fullName>
            </value>
            <value>
                <fullName>Broker+</fullName>
            </value>
            <value>
                <fullName>California Mortgage Expo</fullName>
            </value>
            <value>
                <fullName>California Realtors Expo</fullName>
            </value>
            <value>
                <fullName>CAMP</fullName>
            </value>
            <value>
                <fullName>Chatbot</fullName>
            </value>
            <value>
                <fullName>Christian Knight Sourced</fullName>
            </value>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Collective Genius</fullName>
            </value>
            <value>
                <fullName>Colony AF</fullName>
            </value>
            <value>
                <fullName>Contact Us</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>