force-app/main/default/objects/Source__c/fields/Referral_Source__c.field-meta.xml
<CustomField>
    <fullName>Referral_Source__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referral Source Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Source</relationshipLabel>
    <relationshipName>Source</relationshipName>
    <type>Lookup</type>
</CustomField>