force-app/main/default/objects/Source__c/fields/Referral_Source_Contact__c.field-meta.xml
<CustomField>
    <fullName>Referral_Source_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referral Source Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Source</relationshipLabel>
    <relationshipName>Source</relationshipName>
    <type>Lookup</type>
</CustomField>