force-app/main/default/objects/Source__c/fields/Referring_URL__c.field-meta.xml
<CustomField>
    <fullName>Referring_URL__c</fullName>
    <label>Referring URL</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>