force-app/main/default/objects/Source__c/fields/Source_Owner__c.field-meta.xml
<CustomField>
    <fullName>Source_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Source</relationshipName>
    <type>Lookup</type>
</CustomField>