force-app/main/default/objects/Source__c/fields/True_source__c.field-meta.xml
<CustomField>
    <fullName>True_source__c</fullName>
    <defaultValue>false</defaultValue>
    <label>True Source</label>
    <type>Checkbox</type>
</CustomField>