force-app/main/default/objects/Source__c/fields/utm_Campaign_Content__c.field-meta.xml
<CustomField>
    <fullName>utm_Campaign_Content__c</fullName>
    <label>utm Campaign Content</label>
    <length>255</length>
    <type>Text</type>
</CustomField>