force-app/main/default/objects/Source__c/fields/utm_Campaign_Name__c.field-meta.xml
<CustomField>
    <fullName>utm_Campaign_Name__c</fullName>
    <label>utm Campaign Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>