force-app/main/default/objects/Source__c/fields/utm_Campaign_Source__c.field-meta.xml
<CustomField>
    <fullName>utm_Campaign_Source__c</fullName>
    <label>utm Campaign Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>