force-app/main/default/objects/Source__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>utm_Campaign_Content__c</columns>
    <columns>utm_Campaign_Medium__c</columns>
    <columns>utm_Campaign_Name__c</columns>
    <columns>utm_Campaign_Source__c</columns>
    <columns>utm_Campaign_Term__c</columns>
    <columns>True_source__c</columns>
    <columns>Primary_Source__c</columns>
    <columns>Secondary_Source__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>